--- a/index.html
+++ b/index.html
@@ -42,8 +42,11 @@
         <img src="./image/about1.jpg" alt="beardcut" height="445" width="270" />
         <img src="./image/about2.jpg" alt="haircut" height="445" width="270" />
         <p>About</p>
-        <h2>Best Barbershop in your city</h2>
-        <h3>If you want to add more confidence to your image, you should definitely visit us.</h3>
+        <h2>
+          Best Barbershop in<br />
+          your city
+        </h2>
+        <p>If you want to add more confidence to your image, you should definitely visit us.</p>
         <p>
           We are a team that never stops at what has been achieved and are thirsty for changes. And
           when you fall into the hands of our master, you will never be the same again. We are a
@@ -52,6 +55,145 @@
         </p>
         <button type="button">Online-booking</button>
       </section>
+      <section class="prices">
+        <p>Spend your time with the best masters</p>
+        <h2>Services and prices</h2>
+        <ul>
+          <li>
+            <p>Men’s haircut</p>
+            <p>from 300 uah.</p>
+          </li>
+          <li>
+            <p>Beard trim</p>
+            <p>from 300 uah.</p>
+          </li>
+          <li>
+            <p>Mustache trim</p>
+            <p>from 200 uah.</p>
+          </li>
+          <li>
+            <p>Straight razor shave</p>
+            <p>from 200 uah.</p>
+          </li>
+        </ul>
+        <ul>
+          <li>
+            <p>Trainee’s haircut</p>
+            <p>from 500 uah.</p>
+          </li>
+          <li>
+            <p>Haircut under the nozzle</p>
+            <p>from 200 uah.</p>
+          </li>
+          <li>
+            <p>Children’s haircut (0-12 y.o.)</p>
+            <p>from 300 uah.</p>
+          </li>
+          <li>
+            <p>Camouflage of gray hair</p>
+            <p>from 200 uah.</p>
+          </li>
+        </ul>
+        <button type="button">Online-booking</button>
+      </section>
+      <section class="ratings">
+        <p>Old traditional school</p>
+        <h2>¿Why people come to us?</h2>
+        <p>
+          Only good things are said about us. But it's better to see and feel 1 time than read 10
+          times.
+        </p>
+        <ul>
+          <li>
+            <span>600</span>
+            <sup>+</sup>
+            <p>Satisfied customers per day</p>
+          </li>
+          <li>
+            <span>50</span>
+            <sup>+</sup>
+            <p>Awards for excellent service</p>
+          </li>
+          <li>
+            <span>20</span>
+            <sup>+</sup>
+            <p>Kyiv’s best barbers</p>
+          </li>
+          <li>
+            <span>100</span>
+            <sup>+</sup>
+            <p>Gifts for regular customers</p>
+          </li>
+        </ul>
+      </section>
+      <section class="barbers">
+        <p>For true enjoyers of the atmosphere</p>
+        <h2>Our barbers</h2>
+        <ul>
+          <li>
+            <img src="./image/barber1.jpg" alt="John Smith" width="370" />
+            <h3>John Smith</h3>
+            <p>Extreme Barber</p>
+          </li>
+          <li>
+            <img src="./image/barber2.jpg" alt="Michele Doe" width="370" />
+            <h3>Michele Doe</h3>
+            <p>Extreme Barber</p>
+          </li>
+          <li>
+            <img src="./image/barber3.jpg" alt="Alan Black" width="370" />
+            <h3>Alan Black</h3>
+            <p>Extreme Barber</p>
+          </li>
+        </ul>
+      </section>
+      <section class="examples">
+        <p>In Latin, "barba" means "beard"</p>
+        <ul>
+          <li>
+            <img src="./image/example1.jpg" alt="examples" width="270" />
+          </li>
+          <li>
+            <img src="./image/example2.jpg" alt="examples" width="270" />
+          </li>
+          <li>
+            <img src="./image/example3.jpg" alt="examples" width="270" />
+          </li>
+          <li>
+            <img src="./image/example4.jpg" alt="examples" width="270" />
+          </li>
+        </ul>
+      </section>
+      <section class="contacts">
+        <h2>Contacts</h2>
+        <address>
+          <ul>
+            <li>
+              <a
+                href="https://goo.gl/maps/nTfnvpdcM1ajTAGi7"
+                target="_blank"
+                rel="noopener noreferrer nofollow"
+                >st. Vasilkovaya, 7A Kiev, 08132</a
+              >
+            </li>
+            <li>
+              <a href="tel:+380441111111">+38 044 111 11 11</a>
+            </li>
+            <li>
+              <a href="mailto:barbershop@email.com">barbershop@email.com</a>
+            </li>
+          </ul>
+        </address>
+        <p>Working hours</p>
+        <p>Every day from 9:00 to 22:00</p>
+      </section>
+      <footer>
+        <p>&copy Copyright 2020</p>
+        <ul>
+          <l1><a href="" target="_blank" rel="noopener noreferrer nofollow">Instagram</a></l1>
+          <l1><a href="" target="_blank" rel="noopener noreferrer nofollow">Youtube</a></l1>
+        </ul>
+      </footer>
     </main>
   </body>
 </html>
